<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_design"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.shoppingapp.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_logo"
                    android:src="@drawable/android" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/basket"
                    android:src="@drawable/kaufen" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/moto"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/log_in"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@android:color/holo_red_dark" />

            <EditText
                android:id="@+id/emailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints="Your Email adress"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray" />

            <EditText
                android:id="@+id/passwordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:autofillHints="Your password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ed_design"
                android:padding="10dp"
                android:text="@string/log_in"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="clickSignUp"
                android:padding="10dp"
                android:text="@string/register"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#9932CC"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnShops"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ed_design"
                android:padding="10dp"
                android:text="@string/shops"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnRemember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ed_design"
                    android:onClick="exitApp"
                    android:padding="5dp"
                    android:text="@string/remember"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>