<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7dp"
    android:elevation="6dp"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="5dp"
                android:text="@string/testItem"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#D80606"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item"
                android:maxLines="2"
                android:padding="5dp"
                android:text="@string/dummyNote"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#BC03BC" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/priceChf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="5dp"
                android:text="@string/price_in_chf"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/chf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/priceChf"
                android:maxLines="1"
                android:padding="5dp"
                android:text="@string/_5000"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#44B605" />

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>